# unqlite

./: .env.example  .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  JsonSchemaSerializer.sln  JsonSchemaSerializerConfig.cmake.in  Makefile  README.md  README_Windows.md  address.schema.json  basic_test.cpp  build.sh  build_and_test_windows.bat  build_windows.bat  build_windows.ps1  debug_simple.cpp  debug_test.cpp  docker-compose.prod.yml  docker-compose.wallet-only.yml  docker-compose.yml  example_usage.cpp  minimal_test.cpp  schema_debug.cpp  schema_test.cpp  simple_test.cpp  string_test.cpp  test_windows.bat  test_windows.ps1
JsonSchemaSerializer/: JsonSchemaSerializer.vcxproj
JsonSchemaSerializer/include/: JsonSchemaSerializer.h  JsonSchemaTypes.h
JsonSchemaSerializer/src/: BinarySerializer.cpp  BinarySerializer.h  JsonSchemaParser.cpp  JsonSchemaParser.h  JsonSchemaSerializer.cpp  JsonSchemaValidator.cpp  JsonSchemaValidator.h  MinimalJsonParser.cpp  MinimalJsonParser.h  SimpleBinarySerializer.cpp  SimpleBinarySerializer.h  SimpleJsonParser.cpp  SimpleJsonParser.h  SimpleJsonSchemaValidator.cpp  SimpleJsonSchemaValidator.h
JsonSchemaSerializerTests/: JsonSchemaSerializerTests.vcxproj  TestBinarySerializer.cpp  TestBinarySerializer.h  TestJsonSchemaParser.cpp  TestJsonSchemaParser.h  TestJsonSchemaSerializer.cpp  TestJsonSchemaValidator.cpp  TestJsonSchemaValidator.h  TestRunner.cpp  TestRunner.h
docs/: wallet-maintenance-guide.md
nginx/: nginx.conf  nginx.prod.conf  nginx.wallet-only.conf
scripts/: health-check.sh  init-db.sh
